# command-center

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deploy.sh
openspec/changes/agent-task-grouping/: design.md  tasks.md
openspec/changes/claude-session-events/: design.md
openspec/changes/claude-session-ux/: design.md
openspec/changes/custom-recurrence-intervals/: proposal.md
openspec/changes/deploy-script/: design.md  proposal.md  tasks.md
openspec/changes/external-note-editor/: design.md  proposal.md  tasks.md
openspec/changes/nlp-action-transparency/: design.md  proposal.md
openspec/changes/nlp-date-context/: tasks.md
openspec/changes/nlp-multi-turn/: design.md  proposal.md
openspec/changes/nlp-update-due-date/: design.md
openspec/changes/nlp-web-search/: proposal.md
openspec/changes/note-cli-commands/: design.md  proposal.md  tasks.md
openspec/changes/per-view-grouping/: design.md  tasks.md
openspec/changes/recurrence-weekday-anchoring/: tasks.md
openspec/changes/recurring-task-view/: design.md  proposal.md
openspec/changes/remove-cli-commands/: tasks.md
openspec/changes/remove-slack-cli-only-todoist/: proposal.md  tasks.md
openspec/changes/semver-versioning/: design.md  tasks.md
openspec/changes/slack-sync-performance/: tasks.md
openspec/changes/task-multi-notes/: design.md  proposal.md  tasks.md
skills/task-manager/: SKILL.md
src/: auth.rs  claude_session.rs  cli.rs  config.rs  lib.rs  main.rs  nlp.rs  note.rs  output.rs  parser.rs  slack.rs  storage.rs  task.rs  todoist.rs  tui.rs
tests/: integration.rs
(+350 files in other folders)
