[package]
name = "task"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
mockito = "1.7.2"
