[package]
name = "task"
version = "1.7.0"
edition = "2024"

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
ratatui  = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
mockito = "1.7.2"

[[bin]]
name = "task"
path = "src/bin/task.rs"

[[bin]]
name = "task-tui"
path = "src/bin/task_tui.rs"
required-features = ["tui"]
